added double sided display

--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 
 <div class="main container">
 <h1 class="site-title hidden-xs">ArkhamDB</h1>
-<div class="site-slogan">Deckbuilder for the Arkham Horror LCG</div>
+<div class="site-slogan">Deckbuilder and Card Database for the Arkham Horror LCG</div>
 </div> <!-- .container -->
 
 <div class="main container">
