--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -14,6 +14,10 @@ body {
 	font-family: 'Julius Sans One', sans-serif;
 	font-weight: 700;
 }
+.card-subname {
+	padding-left : 2.5em;
+	border-top : solid rgba(100,100,100,0.5) 1px;
+}
 .card-preview {
     color: red;
 }
