--- a/src/AppBundle/Resources/views/Search/card-name-with-link.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-name-with-link.html.twig
@@ -1,3 +1,4 @@
 {% if card.is_unique == true %}<span class="icon-unique"></span> {% endif %}
-<a href="{{ card.url }}" class="card-name card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}{% if card.subname %}: <span class="subname">{{ card.subname }}</span> {% endif %}
+<a href="{{ card.url }}" class="card-name card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}
 </a>
+{% if card.subname %}<div class="card-subname small">{{ card.subname }}</div> {% endif %}
