--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -161,6 +161,11 @@ div.tags span.tag:not(:first-child)::before {
 	text-decoration: line-through;
 }
 
+.deck-content .slot-header {
+	color : rgba(100, 100, 100, 0.7);
+	border-bottom : solid 1px rgba(100, 100, 100, 0.1);
+}
+
 /********** DECK EDITOR ************/
 
 #collection-grid .col-sm-6 .media, #collection-grid .col-sm-4 .media {
