added first way to redraw treachery

--- a/src/AppBundle/Resources/views/Builder/draw-simulator.html.twig
+++ b/src/AppBundle/Resources/views/Builder/draw-simulator.html.twig
@@ -15,6 +15,7 @@
 		    	<button class="btn btn-default btn-sm" data-command="5">5</button>
 		    	<button class="btn btn-default btn-sm" data-command="all">all</button>
 		    	<button class="btn btn-default btn-sm" data-command="clear" disabled="disabled">Reset</button>
+		    	<button class="btn btn-default btn-sm" data-command="redraw" disabled="disabled">Redraw Treachery</button>
 		    </div>
 		    <div title="Odds to have at least 1 copy of a desired card, after having drawn that many cards from the deck, depending of the number of copies in the deck (1 - 2 - 3)">
 		    	<span class="small">Odds: 
