--- a/src/AppBundle/Resources/views/Builder/deck-charts.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deck-charts.html.twig
@@ -5,4 +5,10 @@
 	<div class="col-sm-6">
 		<div id="deck-chart-cost" style="width:100%;height:250px"></div>
 	</div>
+	<div class="col-sm-6">
+		<div id="deck-chart-skill" style="width:100%;height:250px"></div>
+	</div>
+	<div class="col-sm-6">
+		<div id="deck-chart-slot" style="width:100%;height:250px"></div>
+	</div>
 </div>
