--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -14,13 +14,13 @@
 
 {% block body %}
 <div class="container">
-	<div class="row title bg-faction bg-{{ decklist.faction.code }}">
+	<div class="row title bg-faction bg-">
 		<div class="col-xs-12">
 			<h1 class="decklist-name text-center">
-				<span class="icon icon-{{ decklist.faction.code }}"></span>
+				<span class="icon icon-"></span>
 				{{ decklist.name }}
 				<span class="dropdown">
-				  <button class="btn dropdown-toggle bg-{{ decklist.faction.code }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" id="dropdownVersions">
+				  <button class="btn dropdown-toggle bg-" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" id="dropdownVersions">
 				    {{ decklist.version }}
 				    <span class="caret"></span>
 				  </button>
