--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -67,8 +67,7 @@ $(function () {
 
 <tr>
 <td class="decklist-faction-image hidden-xs">
-	<img src="/bundles/app/images/factions/{{ decklist.faction.code }}.png">
-	{% if decklist.slots.agenda %}<img src="/bundles/cards/{{ decklist.slots.agenda.code }}.png">{% endif %}
+	<img src="/bundles/cards/{{decklist.getCharacter().getCode()}}.png">
 </td>
 <td>
     <article>
