fixed will to willpower

--- a/src/AppBundle/Resources/views/Search/card-props.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-props.html.twig
@@ -17,7 +17,7 @@
 
 {% if card.type_code == 'investigator' %}
 <div class="card-props">
-	Willpower: {{ macros.integer_or_x(card.skill_will) }}.
+	Willpower: {{ macros.integer_or_x(card.skill_willpower) }}.
 	Intellect: {{ macros.integer_or_x(card.skill_intellect) }}.
 	Combat: {{ macros.integer_or_x(card.skill_combat) }}.
 	Agility: {{ macros.integer_or_x(card.skill_agility) }}.
